# terrapin-orm

./: .gitignore  LICENSE  Makefile  README.md  fewfewfw.py  pyproject.toml  testfwefew.py
.github/workflow/: lint.yaml  test.yaml
terrapin_orm/: __cli__.py  __init__.py  __main__.py  configs.py  connection.py  functions.py  main.py  migrations.py  sql.py  table.py  utils.py
terrapin_orm/fields/: __init__.py  array.py  base.py  binary.py  boolean.py  character.py  datetime.py  jsonb.py  numeric.py  operations.py  uuid.py
terrapin_orm/managers/: __init__.py  base.py  create_table.py  delete.py  drop_table.py  insert.py  select.py  update.py
